--- a/demo.html
+++ b/demo.html
@@ -1,33 +1,20 @@
+<!DOCTYPE html>
 <html lang="fr">
    <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Vue des résultats d'une soumission</title>
-      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script type="text/javascript">window.jQuery || document.write('<script src="ext/jquery.min.js">\x3C/script>')</script>
-      <script src="ext/jquery/jquery.ba-postmessage.min.js"></script>
+      <script src="bower_components/jquery/dist/jquery.min.js"></script>
       <link href="style.css" type="text/css" rel="stylesheet">
-      <link href="ext/bootstrap/css/bootstrap.min.css" type="stext/css" rel="stylesheet">
-      <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"/>   -->
+      <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="stext/css" rel="stylesheet">
       <script src="js/get_height_submission.js"></script>
-      <script src="config.js"></script>
-      <script>
-         var textStatus = "";
-      </script>
    </head>
    
    <body>
       <div>
          <h1>Résultats de la soumission</h1>
-         <!--<p>Id soumission : <input type="text" ng-model="submissionField" /> <input type="button" value="ok" ng-click="updateSubmission()" /></p>-->
-         <!--<showsubmission curSubmission="812501"></showsubmission> <!-- idsub doesn't work -->
-         <!--<showsubmission curSubmission="812500"></showsubmission> <!-- idsub doesn't work -->
-         <iframe id="submission812507" class="submission_iframe" scrolling="no" src="submission_template.html?curSubmission=812507&amp;showSubmission=false&amp;urlfrom=view.html">
+         <iframe id="submission14228370934757056" class="submission_iframe" scrolling="no" src="submission_template.html?curSubmission=14228370934757056&amp;showSubmission=false&amp;urlfrom=view.html">
          </iframe>
-         <iframe id="submission812506" class="submission_iframe" scrolling="no" src="submission_template.html?curSubmission=812506&amp;showSubmission=false&amp;urlfrom=view.html">
-         </iframe>
-         <!--<div ng-include src="'view_submission.html'"></div>-->
-
       </div>
-   
    </body>
 </html>
