--- a/recent_submissions.html
+++ b/recent_submissions.html
@@ -1,26 +1,25 @@
-<html lang="fr" ng-app="recentSubmissions">
+<!DOCTYPE html>
+<html lang="fr" ng-app='recentSubmissions'>
    <head>
-      <title>Vue des résultats d'une soumission</title>
-      <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
-      <script type="text/javascript">window.angular || document.write('<script src="ext/angular.min.js">\x3C/script>')</script>
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script type="text/javascript">window.jQuery || document.write('<script src="ext/jquery.min.js">\x3C/script>')</script>
-      <script src="ext/jquery/jquery.ba-postmessage.min.js"></script>
-      <script src="ext/bootstrap/ui-bootstrap_modified.js"></script> <!-- boostrap ui in angular. We only use local version because it has been modified -->
-      <script src="config.js"></script>
+      <meta charset="utf-8">
+      <title>Liste des soumissions des 48 dernieres heures ou non évaluées pour le moment</title>
+      <script src="bower_components/jquery/dist/jquery.min.js"></script>
+      <script src="bower_components/angular/angular.min.js"></script>
+      <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+      <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+      <script src="bower_components/raphael/raphael-min.js"></script>
+      <script src="commonFramework/modelsManager/modelsManager.js"></script>
+      <script src="shared/models.js"></script>
+      <script src="shared/utils.js"></script>
+      <script src="commonFramework/sync/syncQueue.js"></script>
       <script src="js/recentSubmissionsCtrl.js"></script>
       <script src="js/submissionManager.js"></script>
       <script src="js/get_height_submission.js"></script>
-      <script src="modelsManager/modelsManager.js"></script>
-      <script src="shared/models.js"></script>
-      <script src="shared/utils.js"></script>
-      <script src="sync/syncQueue.js"></script>
+      <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="stext/css" rel="stylesheet">
       <link href="style.css" type="text/css" rel="stylesheet">
-      <link href="ext/bootstrap/css/bootstrap.min.css" type="text/css" rel="stylesheet">
       <script>
-         var textStatus = "";
-         isLoadingRecentSubmissions = true;
+         var rootUrl = 'commonFramework/';
+         var isLoadingRecentSubmissions = true;
       </script>
    </head>
    
@@ -44,7 +43,6 @@
                </iframe>
             </div>
          </div>
-         
 
 	   </div>
    
