--- a/submission_template.html
+++ b/submission_template.html
@@ -6,6 +6,8 @@
       <meta http-equiv="pragma" content="no-cache" />
       <meta http-equiv="cache-control" content="no-cache">
       <meta http-equiv="Expires" content="-1">
+      <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+      <link href="style.css" type="text/css" rel="stylesheet">
       <script src="bower_components/jquery/dist/jquery.min.js"></script>
       <script src="bower_components/angular/angular.min.js"></script>
       <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
@@ -18,8 +20,6 @@
       <script src="js/heightManager.js"></script>
       <script src="js/submissionManager.js"></script>
       <script src="js/submissionCtrl.js"></script>
-      <link href="style.css" type="text/css" rel="stylesheet">
-      <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" type="stext/css" rel="stylesheet">
       <script>
          var rootUrl = 'commonFramework/';
       </script>
@@ -33,7 +33,6 @@
                   <accordion-heading>
                      <div ng-include src="'template/header_template.html'"></div>
                   </accordion-heading>
-                  
 
                   <div ng-if="submission != undefined && !submission.bEvaluated && !loading" class="submission_global">
                      <div class="submission_error">
